# tender-document-extraction

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_dev.py  run_worker.py  start_worker.py  test_all.sh  test_enhanced_npo_extraction.py  test_ollama_npo.py  test_rq_worker.py
.claude/: settings.local.json
.github/workflows/: enforce-testing.yml
app/: __init__.py  config.py
app/adapters/: __init__.py  response_adapter.py
app/core/: exceptions.py  rate_limiter.py  retry_config.py
app/models/: extraction.py
app/routers/: extraction.py  health.py  usage.py  web.py
app/services/: extraction_worker.py  gap_analysis.py  gemini_service.py  job_manager.py  llm_service.py  usage_tracker.py
app/utils/: document_processor.py  prompt_builder.py
docs/: PRD.md  Ruff_is_giving_me_this_error__app_servic.md  development-workflow.md  prompt-templates
docs/features/: multi-llm-architecture.md
docs/features/archive/: coverage-improvement-plan.md
docs/pr-recovery/: PRINCIPLES.md  SERVICE-PATTERNS.md  phase-2a-unit-test-fixes.md  phase-3-validation.md  phase-4-precommit-enhanced.md  phase-4-precommit.md  phase-4d-single-document-dead-code-removal.md  phase-5-final-commit.md  phase4d-batch-execution-prompt.md  phase4e-batch-execution-prompt.md  phase4e-refactoring-strategy.md  pr-recovery-plan-v2.md
docs/pr-recovery/phase4c/: phase4c-completion-summary.md  phase4c-next-batch-prompt.md  phase4c-progress-report.md
docs/testing/: multi-llm-qa-checklist.md  test-debugging-guide.md
prompts/: quality-framework-reminder.md
prompts/configs/: default.yaml
prompts/templates/: base.yaml  multi_document_extraction.yaml  tender_extraction.yaml
prompts/templates/gemini/: tender_extraction.yaml
prompts/templates/ollama/: tender_extraction.yaml
prompts/templates/openai/: tender_extraction.yaml
scripts/: dev-docker-setup.sh  test_llm_backends.py  test_queue.py
templates/: base.html
tests/: conftest.py
tests/fixtures/: mocks.py  test_data_manager.py  test_utils.py
tests/fixtures/documents/: tender_0cd5e9ce.txt  tender_4b8f7218.txt  tender_a267517f.txt
tests/fixtures/mock_responses/: gemini_responses.json
tests/fixtures/responses/: expected_0cd5e9ce9c5568b9d6966475d8ff10f8.json  expected_4b8f7218a5367e7b3baba0f2a57f12db.json  expected_a267517f2caf81d3557b62dc8a1c9cf0.json
tests/integration/: conftest.py  test_e2e_workflows.py  test_large_batch_processing.py  test_npo_documents.py  test_provider_failover.py  test_real_response_workflow.py
tests/integration/mocks/: gemini_mock_server.py  ollama_mock_server.py  openai_mock_server.py
tests/performance/: locustfile.py  performance_test_runner.py
tests/unit/: test_abstract_compliance.py  test_document_processing.py  test_error_recovery.py  test_extraction_router.py  test_extraction_router_simple.py  test_extraction_worker.py  test_gap_analysis.py  test_gemini_service.py  test_gemini_service_enhanced.py  test_health_router.py  test_health_router_coverage.py  test_job_manager.py  test_json_extraction.py  test_llm_service.py  test_npo_response_adapter.py  test_prompt_validation.py  test_rate_limiter.py  test_response_adapter.py  test_usage_router.py  test_usage_tracker.py  test_web_router.py
