[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-batch-extract"
version = "1.0.0"
description = "AI-powered tender document extraction service using Google Gemini 2.5 Pro"
authors = [{name = "Development Team", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "document-extraction", "gemini", "fastapi", "tender", "procurement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "gunicorn==21.2.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "google-generativeai==0.3.2",
    "redis==5.0.1",
    "rq==1.15.1",
    "PyPDF2==3.0.1",
    "Pillow==10.1.0",
    "python-multipart==0.0.6",
    "python-docx==1.1.0",
    "httpx==0.25.2",
    "aiofiles==23.2.1",
    "structlog==23.2.0",
    "prometheus-client==0.19.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "cryptography==41.0.8",
    "jinja2==3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-httpx==0.26.0",
    "responses==0.24.1",
    "hypothesis==6.92.1",
    "pytest-benchmark==4.0.0",
    "mutmut==2.4.3",
    "testcontainers==3.7.1",
    "locust==2.17.0",
    "black==23.11.0",
    "isort==5.12.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
    "bandit==1.7.5",
    "pre-commit==3.6.0",
    "watchdog==3.0.0",
    "ipython==8.17.2",
]

test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-httpx==0.26.0",
    "responses==0.24.1",
]

docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    "mkdocs-swagger-ui-tag==0.6.8",
]

[project.urls]
Homepage = "https://github.com/example/tender-batch-extract"
Documentation = "https://tender-extract-docs.example.com"
Repository = "https://github.com/example/tender-batch-extract"
"Bug Tracker" = "https://github.com/example/tender-batch-extract/issues"

[project.scripts]
tender-extract = "main:app"

# Tool configurations

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # bandit
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "DTZ", # flake8-datetimez
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
]
ignore = [
    "S101",    # Use of assert detected
    "S104",    # Possible binding to all interfaces
    "S108",    # Probable insecure usage of temp file/directory
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "TRY003",  # Avoid specifying long messages outside the exception class
    "B008",    # Do not perform function calls in argument defaults
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001", "ARG002"]
"app/config.py" = ["S105", "S106"]  # Possible hardcoded password/secrets

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process (false positives)

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
]
norecursedirs = [
    "scripts", 
    "tests/integration",
    "htmlcov",
    ".git",
    "__pycache__",
    ".pytest_cache"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require running server)",
    "script: marks tests as script tests (require server/services)",
    "gemini_api: marks tests that require real Gemini API access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning", 
    "ignore:.*google.*:UserWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Phase 6 Test Coverage Report"